Fixed section header top spacing issue; added colours to section headers.

--- a/css/style.css
+++ b/css/style.css
@@ -2,21 +2,32 @@
 	box-sizing: border-box;
 }
 
-h1 {
+h1 {	
 	margin-bottom: 15px;
 	text-align: center;
 	font-family: Helvetica Serif Sans-serif;
 }
 
-h2 {
+h2 {	
 	margin-bottom: 15px;
+	margin-top: 0px;
 	position: relative;
-	left: 50px;
+	float: right;	
+	width: 100px;	
+	border-left: 1px solid black;
+	border-bottom: 1px solid black;
+	text-align: center;
+}
+
+p {
+	top: 40px;
+	position: absolute;
+	margin-top: 0px;
 }
 
 .section {
 	border: 1px solid black;
-	background-color: #A52A2A;
+	background-color: grey;
 	width: 100%;
 	height: 150px;
 	margin-right: auto;
@@ -24,11 +35,30 @@ h2 {
 	font-family: Helvetica;
 	color: white;
 	position: relative;
+	text-align: justify;
 }
 
 .row {
 	width: 100%;
 	padding-right: 0;
+}
+
+.chicken {
+	background-color: #FA8072;
+	color: black;
+	font-size: 16pt;
+}
+
+.beef {
+	background-color: #800000;
+	color: white;
+	font-size: 16pt;
+}
+
+.sushi {
+	background-color: #DAA520;
+	color: black;
+	font-size: 16pt;
 }
 
 /*Large screen devices*/
